# shish

./: Cargo.toml  README.md
shish/: Cargo.toml
shish/src/: shish.rs
shish/src/lib/: cli.rs  commands.rs  external.rs  mod.rs  parser.rs  path_utils.rs
shish/src/lib/buildins/: cd.rs  false.rs  mkdir.rs  mod.rs  pwd.rs  true.rs  type.rs
shish/src/lib/commands/: cd.rs  external.rs  mkdir.rs  pwd.rs  type.rs
shish_buildins/: Cargo.toml
shish_buildins/cat/: Cargo.toml
shish_buildins/cat/src/: cat.rs
shish_buildins/cat/tests/: cli.rs
shish_buildins/cat/tests/expected/: all.b.out  all.n.out  fox.txt.n.out  spiders.txt.n.out  the-bustle.txt.b.out  the-bustle.txt.n.out
shish_buildins/core/: Cargo.toml
shish_buildins/echo/: Cargo.toml
shish_buildins/echo/src/: echo.rs  main.rs
shish_buildins/echo/tests/: cli.rs
shish_buildins/tests/: echo.rs  true.rs
src/: commands.rs  main.rs  path_utils.rs
src/commands/: cd.rs  echo.rs  exit.rs  external.rs  type.rs
src/lib/: cli.rs
src/lib/cli/: commands.rs  path_utils.rs
src/lib/cli/commands/: cd.rs  echo.rs  exit.rs  external.rs  mkdir.rs  type.rs
tests/: false.rs
