[package]
name = "shish"
version = "0.1.0"
authors = ["Dmitriy Popov <me@demestoss.com>"]
edition = "2021"

[lib]
name = "shish"
path = "./src/lib/mod.rs"

[[bin]]
name = "shish"
path = "./src/shish.rs"

[dependencies]
anyhow = "1.0.68"                                # error handling
thiserror = "1.0.38"
clap = { version = "4.5.13", features = ["derive"] }                             # error handling
shlex = "1.3.0"
rand = "0.8.5"
colorful = "0.3.2"
glob = "0.3.1"

[dev-dependencies]
assert_cmd = "2.0.15"
pretty_assertions = "1.4.0"
