[package]
name = "shish-buildins-cat"
version = "0.1.0"
authors = ["Dmitriy Popov <me@demestoss.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"                                # error handling
clap = { version = "4.5.13", features = ["derive"] }                             # error handling

[dev-dependencies]
assert_cmd = "2.0.15"
predicates = "3.1.2"
pretty_assertions = "1.4.0"
rand = "0.8.5"
