[package]
name = "shish-buildins-echo"
version = "0.1.0"
authors = ["Dmitriy Popov <me@demestoss.com>"]
edition = "2021"

[[bin]]
name = "echo"
path = "src/echo.rs"

[dependencies]
anyhow = "1.0.68"                                # error handling
clap = { version = "4.5.13", features = ["derive"] }                             # error handling
rand = "0.8.5"
colorful = "0.3.2"

[dev-dependencies]
assert_cmd = "2.0.15"
pretty_assertions = "1.4.0"
